--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content= "나오 - 프로필 링크" />
-        <meta property="og:description" content="장난끼 가득한 눈 " />
+        <meta property="og:description" content="城月菜央" />
         <meta property="og:image" content="공유할 이미지" />
-        <title>나오 - 프로필 링크</title>
+        <title> 프로필 링크</title>
         <style>
 
                   @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -189,8 +189,8 @@
     <body>
         <div class ="wrap">
             <div class = "profile"></div>
-            <h1 class = "main"> 시로즈키나오 [城月菜央] </h1>
-            <p class = "sub"> <a href ="http://takanenonadeshiko.jp/nao_kizuki/">나에 대해 알아보자 않을래? </a> </p>
+            <h1 class = "main"> [城月菜央]- KIZUKI NAO </h1>
+            <p class = "sub"> <a href ="http://takanenonadeshiko.jp/nao_kizuki/">私について調べてみないか?。 </a> </p>
 
             <p class = "SNS"> SNS</p>
 
