--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <body>
         <div class ="wrap">
             <div class = "profile"></div>
-            <h1 class = "main"> [城月菜央]- KIZUKI NAO </h1>
+            <h1 class = "main"> KIZUKI NAO </h1>
             <p class = "sub"> <a href ="http://takanenonadeshiko.jp/nao_kizuki/">私について調べてみないか?。 </a> </p>
 
             <p class = "SNS"> SNS</p>
