--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <a target="_blank" href= "https://twitter.com/nao_kizuki">twitter</a>
             <a target="_blank" href= "https://www.instagram.com/nao_kizuki_/">instagram</a>
             <a target="_blank" href= "https://www.showroom-live.com/r/tps_122500">Show Room</a>
-            <a target="_blank" href= "https://www.tiktok.com/@nao_kizuki">TicTok</a>
+            <a target="_blank" href= "https://www.tiktok.com/@nao_kizuki">TikTok</a>
 
 
         </div>
